--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
 	"require":{
 		"php":">=5.3.3"
 	},
+	"license": "jyt",
 	"minimum-stability": "stable",
 	"autoload": {
 		"psr-4": {"mycomposer\\":"src/"}
